# merger

./: CMakeLists.txt  README.md  clustering_inference.csv  package.xml
data/: Explain format.csv
include/can/: canreceiver.cpp  canreceiver.hpp
include/cluster_inference/: cluster_inference.hpp
include/merger/: demo.hpp  merger.hpp  types.h
include/monitor/: demo (copy).hpp  demo.hpp  demo_camera.hpp  demo_detection.hpp  pub.hpp  shared_val.hpp  sub.hpp
include/objectdetection/: objectdetection.cpp  objectdetection.hpp
include/objectdetection/darknet/: Makefile  darknet  image_yolov4.sh  uselib
include/objectdetection/darknet/cfg/: yolov4_4000_final.cfg
include/objectdetection/darknet/include/: darknet.h
include/objectdetection/darknet/src/: network_kernels.cu
include/pcan/: ObjectDetectionsReceiver.cpp  ObjectDetectionsReceiver.hpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/monitor/lib/monitor/: demo_node
install/monitor/share/monitor/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
launch/: pub_demo.launch.py
log/: latest_build
src/: .demo.cpp.swp  .merger.cpp.swp  cluster_inference.cpp  demo.cpp  demo1.cpp  demo2.cpp  demo3.cpp  demo_camera.cpp  demo_detection (copy).cpp  demo_detection.cpp  detection.cpp  image_merger.cpp  merger.cpp  pub.cpp  sub.cpp
src/exec/: demo_exec (copy).cpp  demo_exec.cpp  demo_exec1.cpp  demo_exec2.cpp  demo_exec3.cpp  merger_exec.cpp  pub_exec.cpp  sub_exec.cpp
